fix destination container content alignmen

--- a/src/sass/global/global.sass
+++ b/src/sass/global/global.sass
@@ -143,5 +143,8 @@ nav.navbar
 
 
 .destination
-    .container
+    .destination-body 
+        display: flex
+        justify-content: space-between
+        align-items: center
         height: 100vh
